# Myo-Intelligesture

./: CMakeLists.txt
lib/: .gitignore
src/core/: DeviceListenerWrapper.cpp  DeviceListenerWrapper.h  Gesture.cpp  Gesture.h  OrientationUtility.cpp  OrientationUtility.h  Pose.cpp  Pose.h
src/features/: RootFeature.h
src/features/filters/: Debounce.h
src/features/gestures/: PoseGestures.h
tests/: CMakeLists.txt  PrintEventsFeature.h  myo_intelligesture-myosim.cpp  myo_intelligesture.cpp  tests.cpp
